# ofcm

./: CMakeList.txt  CMakeLists.txt  LICENSE  README.md
Results/: table
logs/: results.txt
models/: main.py
models/centroids/: avrCentroids.txt  centers_model.txt  centroids_it_0.txt  centroids_it_120.txt  centroids_it_144.txt  centroids_it_168.txt  centroids_it_24.txt  centroids_it_48.txt  centroids_it_72.txt  centroids_it_96.txt  centroids_personperson11.txt  meanCentroids_5clusters.txt
models/centroids/alldata/: centroids_1.txt  centroids_10.txt  centroids_11.txt  centroids_12.txt  centroids_13.txt  centroids_14.txt  centroids_15.txt  centroids_16.txt  centroids_17.txt  centroids_18.txt  centroids_2.txt  centroids_3.txt  centroids_4.txt  centroids_5.txt  centroids_6.txt  (+3 more)
models/test/: testlabel_until_144.txt  testlabel_until_168.txt
models/training/: Untitled.ipynb  labeldata.txt  main.py  toplot.py  traindata.txt  trainingdata.txt  trainlabel.txt
options/: kth.txt
src/: bow.cpp  centroids.cpp  clusters.cpp  coocurrence.cpp  cuboids.cpp  getOptions.cpp  getoptions.cpp  haralick.cpp  kmeans.cpp  libsvm.cpp  main.cpp  ofcm.cpp  opticalflow.cpp  option.cpp  plot.cpp  recurrentNetwork.cpp  trainingRecurrentNetwork.cpp  utils.cpp
src/headers/: SVMHandler.hpp  bow.hpp  centroids.hpp  clusters.hpp  coocurrence.hpp  cuboids.hpp  haralick.hpp  kmeans.hpp  libsvm.hpp  miscellanius.hpp  ofcm.hpp  opticalflow.hpp  option.hpp  plot.hpp  recurrentNetwork.hpp  utils.h  utils.hpp
test/: lables_test_data.txt  svm_test.cpp  test_data.txt  test_parser.cpp
(+15 files in other folders)
